<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hector.granjasandroid.view.Animal.ModifyAnimalView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombre_empleado_ModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empleado_nombre_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/apellido_empleado_ModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empleado_apellido_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/cargo_empleado_ModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empleado_cargo_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/correo_empleado_ModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empleado_correo_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/salario_empleado_ModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empleado_salario_label"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/fechaContrato_empleado_ModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empleado_fechaContrato_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <!-- LinearLayout para los botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <!-- Botón de confirmación -->
        <Button
            android:id="@+id/confirm_modify_empleado_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="modifyButton"
            android:text="@string/confirm_button"
            android:textSize="15sp"/>

        <!-- Botón de cancelación -->
        <Button
            android:id="@+id/cancel_modify_empleado_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="cancelModifyButton"
            android:text="@string/cancel_button"
            android:textSize="15sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
