<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hector.granjasandroid.view.Animal.AddAnimalView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombre_animal_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/animal_nombre_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/tipo_animal_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/animal_tipo_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sexo_animal_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/animal_sexo_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/fechaEntrada_animal_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/animal_fechaEntrada_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
        <!-- Otros EditTexts -->





    </LinearLayout>

    <!-- Otras vistas -->

    <LinearLayout
        android:id="@+id/imv_add_animal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/add_animal_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="addButton"
            android:text="@string/add_button"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/cancel_add_animal_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="cancelButton"
            android:text="@string/cancel_button"
            android:textSize="15sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
